# openapi.yaml
@@ -1,9 +1,9 @@
 openapi: 3.0.0
 info:
-  title: WebServiceUas
+  title: WebService130
   version: 1.0.0
 servers:
-  - url: http://localhost:8080
+  - url: https://130.162.195.228/mhs714220006
 components:
   securitySchemes:
     bearerAuth:
@@ -16,19 +16,33 @@ paths:
         - default
       summary: UasRegis
       requestBody:
+        required: true
         content:
           application/json:
             schema:
               type: object
-              example:
-                username: balqis
-                password: Balqis123
-                email: balqisrosa@gmail.com
-                phone_number: '083154664118'
-                address: Jl.Adikusumah Bandung
+              properties:
+                id:
+                  type: integer
+                  example: 1
+                username:
+                  type: string
+                  example: balqis
+                password:
+                  type: string
+                  example: Balqis123
+                email:
+                  type: string
+                  example: balqisrosa@gmail.com
+                phone_number:
+                  type: string
+                  example: '083154664118'
+                address:
+                  type: string
+                  example: Jl.Adikusumah Bandung
       responses:
         '200':
-          description: Successful response
+          description: Respon Berhasil
           content:
             application/json: {}
   /login:
@@ -37,172 +51,194 @@ paths:
         - default
       summary: UserLogin
       requestBody:
+        required: true
         content:
           application/json:
             schema:
               type: object
-              example:
-                username: balqis
-                password: Balqis123
-                email: balqisrosa@gmail.com
-                phone_number: '083154664118'
-                address: Jl.Adikusumah Bandung
+              properties:
+                id:
+                  type: integer
+                  example: 1
+                username:
+                  type: string
+                  example: balqis
+                password:
+                  type: string
+                  example: Balqis123
+                email:
+                  type: string
+                  example: balqisrosa@gmail.com
+                phone_number:
+                  type: string
+                  example: '083154664118'
+                address:
+                  type: string
+                  example: Jl.Adikusumah Bandung
       responses:
         '200':
-          description: Successful response
+          description: Respon Berhasil
           content:
             application/json: {}
   /products:
     get:
       tags:
         - default
-      summary: Product
+      summary: Produk
       security:
         - bearerAuth: []
       responses:
         '200':
-          description: Successful response
+          description: Respon Berhasil
           content:
             application/json: {}
     post:
       tags:
         - default
-      summary: ProductPost
+      summary: TambahProduk
       requestBody:
+        required: true
         content:
           application/json:
             schema:
               type: object
-              example:
-                name: jeans
-                price: 100000
-                stock: 5
-                description: jeans limited edition
+              properties:
+                name:
+                  type: string
+                  example: T-shirt
+                price:
+                  type: integer
+                  example: 200000
+                stock:
+                  type: integer
+                  example: 1
+                description:
+                  type: string
+                  example: t-shirt limited edition
       security:
         - bearerAuth: []
       responses:
         '200':
-          description: Successful response
+          description: Respon Berhasil
           content:
             application/json: {}
-  /products/{productId}:
+  /products/{id}:
     put:
       tags:
         - default
-      summary: ProductUpdate
-      parameters:
-        - name: productId
-          in: path
-          required: true
-          schema:
-            type: string
+      summary: UpdateProduk
       requestBody:
+        required: true
         content:
           application/json:
             schema:
               type: object
-              example:
-                name: jeans kulot
-                price: 150000
-                stock: 5
-                description: jeans limited edition
+              properties:
+                name:
+                  type: string
+                  example: T-shirt
+                price:
+                  type: integer
+                  example: 200000
+                stock:
+                  type: integer
+                  example: 2
+                description:
+                  type: string
+                  example: t-shirt limited edition
       security:
         - bearerAuth: []
       responses:
         '200':
-          description: Successful response
+          description: Respon Berhasil
           content:
             application/json: {}
     delete:
       tags:
         - default
-      summary: DeleteProduct
-      parameters:
-        - name: productId
-          in: path
-          required: true
-          schema:
-            type: string
+      summary: HapusProduk
       security:
         - bearerAuth: []
       responses:
         '200':
-          description: Successful response
+          description: Respon Berhasil
           content:
             application/json: {}
   /orders:
     get:
       tags:
         - default
-      summary: Order
+      summary: Pesanan
       security:
         - bearerAuth: []
       responses:
         '200':
-          description: Successful response
+          description: Respon Berhasil
           content:
             application/json: {}
     post:
       tags:
         - default
-      summary: OrderPost
+      summary: TambahPesanan
       requestBody:
+        required: true
         content:
           application/json:
             schema:
               type: object
-              example:
-                user_id: 3
-                total: 250000
-                status: Sukses
+              properties:
+                user_id:
+                  type: integer
+                  example: 3
+                total:
+                  type: integer
+                  example: 250000
+                status:
+                  type: string
+                  example: Sukses
       security:
         - bearerAuth: []
       responses:
         '200':
-          description: Successful response
+          description: Respon Berhasil
           content:
             application/json: {}
-  /orders/{orderId}:
+  /orders/{id}:
     put:
       tags:
         - default
-      summary: OrderUpdate
-      parameters:
-        - name: orderId
-          in: path
-          required: true
-          schema:
-            type: string
+      summary: UpdatePesanan
       requestBody:
+        required: true
         content:
           application/json:
             schema:
               type: object
-              example:
-                user_id: 3
-                total: 250000
-                status: gagal
+              properties:
+                user_id:
+                  type: integer
+                  example: 3
+                total:
+                  type: integer
+                  example: 250000
+                status:
+                  type: string
+                  example: gagal
       security:
         - bearerAuth: []
       responses:
         '200':
-          description: Successful response
+          description: Respon Berhasil
           content:
             application/json: {}
     delete:
       tags:
         - default
-      summary: OrderDelete
-      parameters:
-        - name: orderId
-          in: path
-          required: true
-          schema:
-            type: string
+      summary: HapusPesanan
       security:
         - bearerAuth: []
       responses:
         '200':
-          description: Successful response
+          description: Respon Berhasil
           content:
             application/json: {}
